...

              const SizedBox(height: 15),

              // Opsi Logout
              _buildOptionTile(
                icon: Icons.logout,
                title: 'Logout',
                onTap: () {
                  _handleLogout(context);
                },
              ),

              const SizedBox(height: 100),
...
